# catkin_ws_user

./: .gitignore  README.md  head_camera.yaml  replace.sh
.catkin_tools/odroid/: build.yaml
odroid-build/: .catkin_tools.yaml
odroid-build/auto_stop/: CMakeCache.txt  CTestTestfile.cmake  Makefile  build_env.sh  cmake_install.cmake  install_manifest.txt
odroid-build/auto_stop/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
odroid-build/auto_stop/gtest/: CTestTestfile.cmake  Makefile
odroid-build/auto_stop_usr/: CMakeCache.txt  CTestTestfile.cmake  Makefile  build_env.sh  cmake_install.cmake  install_manifest.txt
odroid-build/auto_stop_usr/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
odroid-build/auto_stop_usr/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
odroid-devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
odroid-devel/lib/auto_stop/: auto_stop_node
odroid-devel/lib/auto_stop_usr/: auto_stop_node
odroid-devel/lib/pkgconfig/: auto_stop.pc  auto_stop_usr.pc
odroid-install/: _setup_util.py
odroid-install/lib/auto_stop/: auto_stop_node
odroid-install/lib/auto_stop_usr/: auto_stop_node
odroid-install/lib/pkgconfig/: auto_stop.pc
src/: Toolchain-arm-linux-gnueabihf.cmake
src/assignment6_gps/: CMakeLists.txt  package.xml
src/assignment6_gps/src/: angle_localisation.py  balloon_detector_ndimage.py  range_calibration_improved.py
src/auto_stop/: CMakeLists.txt
src/cmvision/: CMakeLists.txt  cmvision.launch
src/cmvision/src/: cmvision_color_blob_finder.cpp
src/deep_car/: README.md  setup.py
src/deep_car/deep_car/: .gitignore  data.py  model.py  requirements.txt
src/deep_car/notebooks/: driver.ipynb  train.ipynb
src/deep_car/scripts/: car_connect.sh  clear_ros_env.sh  record_bag.sh  resize_img80x60.py
src/detect_roof_rectangles/: CMakeLists.txt  colors_copy.txt
src/detect_roof_rectangles/launch/: detect.launch
src/detect_roof_rectangles/src/: detect.cpp
src/fisheye_camera_matrix/: CMakeLists.txt  package.xml
src/fisheye_camera_matrix/config/: default.calib  test.calib
src/fisheye_camera_matrix/include/fisheye_camera_matrix/: camera_matrix.hpp
src/fisheye_camera_matrix/launch/: calibrate_offline_manual.launch  camera_matrix_publisher.launch  undistorted_image_publisher.launch
src/fisheye_camera_matrix/src/: camera_matrix.cpp  camera_matrix_publisher.cpp  offline_calibration_manual.cpp  undistorted_image_publisher.cpp
src/fisheye_camera_matrix/srv/: perspective_projection.srv
src/fisheye_camera_matrix_msgs/: CMakeLists.txt  package.xml
src/fisheye_camera_matrix_msgs/msg/: CameraMatrix.msg
src/fu_line_detection/: callgraph.graphml  package.xml
src/fu_line_detection/cfg/: LaneDetection.cfg
src/fu_line_detection/launch/: line_detection_fu.launch
src/fu_line_detection/src/: laneDetection.cpp  laneDetection.h
src/fu_navigation/: CMakeLists.txt  package.xml
src/fu_navigation/src/: control.py  control_with_obstacles.py  make_force_matrixs.py  matrixDynamicMax16cm.npy  obstacles.py  path_parser.py  path_planning_plot.py
src/fub_controller/: CHANGELOG.rst  CMakeLists.txt  README  nodelet_plugins.xml  package.xml
src/fub_controller/cfg/: ControllerMig.cfg  ControllerMigPath.cfg  ControllerMigSteer.cfg
src/fub_controller/launch/: ControllerModelCar.launch
src/fub_controller/src/controller_mig/: ControllerMig.cpp  ControllerMig.h  PathFollower.cpp  PathFollower.h  SteerController.cpp  SteerController.h  VehicleState.cpp  VehicleState.h  main.cpp
src/fub_controller/src/util/: DynamicConfigurationHelper.h  Math.cpp  Math.h  Spline.cpp  Spline.h
src/fub_controller/tests/: TestSteeringAndWheelRatio.cpp  testMath.cpp
src/fub_navigation/: package.xml
src/fub_remap_joystick/: CMakeLists.txt  README  nodelet_plugins.xml  package.xml
src/fub_remap_joystick/launch/: joystick.launch
src/fub_remap_joystick/src/: main.cpp  remap_joystick.cpp
src/fub_trajectory_msgs/: CMakeLists.txt  README.md  package.xml
src/fub_trajectory_msgs/msg/: Trajectory.msg
src/fub_trajectory_msgs_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
src/fub_trajectory_msgs_rviz_plugin/scripts/: send_test_trajectory_msg.py
src/fub_trajectory_msgs_rviz_plugin/src/: trajectory_msg_display.cpp  trajectory_msg_display.h
src/fub_visual_gps/: CMakeLists.txt  README  package.xml
src/fub_visual_gps/src/: balloon_detector.py  hsv_seg_bild.py  kalman_filter.py  perf_test.py  perf_test2.py  perf_test_ndimage.py  plot_test_images.py  range_calibration.py  rectified_localisation.py
src/line_detection_fu/: CMakeLists.txt
src/line_detection_fu/cfg/: LaneDetection.cfg
src/line_detection_fu/launch/: line_detection_fu.launch
src/line_detection_fu/src/: laneDetection.cpp  laneDetection.h
src/lisa_visual_gps/: CMakeLists.txt  package.xml
src/lisa_visual_gps/src/: usb_cam_processing.py
src/map_publisher/: CMakeLists.txt
src/map_publisher/cfg/: map.rviz
src/map_publisher/launch/: robotics_lab.launch
src/odom_validation/: CMakeLists.txt  README.md  package.xml
src/odom_validation/launch/: odom_plotter.launch
src/odom_validation/src/: graph_plotter.py  odom_camera.py  odom_camera_ref.txt  odom_car.py  odom_car_ref.txt  rndf_pub.py  rndf_subs.py  yaw_pub.py
src/play_bag_file/: README  lane.rviz  piece_of_map.yaml  run.launch
src/simple_drive_control/: CMakeLists.txt  package.xml
src/simple_parking_maneuver/: CMakeLists.txt  package.xml
src/simple_parking_maneuver/launch/: simple_drive_control.launch  simple_parking_maneuver.launch
src/simple_parking_maneuver/src/: parking_maneuver.py
src/simple_parking_maneuver/srv/: ParkingManeuver.srv
src/test_model_car/: CMakeLists.txt  package.xml
src/traffic_sign_detection/: CMakeLists.txt  package.xml
src/traffic_sign_detection/launch/: detection.launch
src/traffic_sign_detection/src/: detection.cpp  own19.svm  own27.svm  pub.cpp
src/visual_gps/src/: visual_gps_3d_node.cpp
(+37 files in other folders)
