<?xml version="1.0"?>
<package format="2">
	<name>fub_controller</name>
	<version>1.2.0</version>
	<description>Controller for MiG and e-Instein</description>

	<maintainer email="daniel.goehring@fu-berlin.de">Autonomos-Labs, FU Berlin</maintainer>

	<license>proprietary</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>cmake_modules</build_depend>

	<depend>dynamic_reconfigure</depend>
	<depend>ecl_geometry</depend>
	<depend>fub_trajectory_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>nodelet</depend>
	<depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>tf</depend>

	<test_depend>rosunit</test_depend>

	<export>
		<nodelet plugin="${prefix}/nodelet_plugins.xml" />
	</export>
</package>
