<?xml version="1.0"?>
<package format="2">
  <name>fub_trajectory_msgs</name>
  <version>0.0.1</version>
  <description>Contains messages for trajectories (e.g. to communicate a planned path)</description>

    <maintainer email="fritz.ulbrich@fu-berlin.de">FU Berlin</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="website">https://www.autonomos-labs.de/</url>

  <author email="fritz.ulbrich@fu-berlin.de">Fritz Ulbrich</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>geometry_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
