<?xml version="1.0"?>
<package>
  <name>traffic_sign_detection</name>
  <version>1.0.0</version>
  <description>The traffic_sign_detection package</description>

  <maintainer email="florian.hartmann@fu-berlin.de">Florian Hartmann</maintainer>
  <maintainer email="yuh94@zedat.fu-berlin.de">Yu He</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv2</build_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
</package>
